Adicionando delete para user

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -587,6 +587,9 @@ h4{font-size: 12px;}
         color: $preto;
         font-weight: 300;
       }
+      a.btn-prospera{
+        background-color: $prime;
+      }
     }
 
 
