--- a/plataforma/templates/pages/no_edit_form.html
+++ b/plataforma/templates/pages/no_edit_form.html
@@ -78,6 +78,9 @@
           </div>
           <div class="col-xs-12">
             <button class="btn btn-prospera btn-lg" type="submit">{% if action %} {{action}} {% else %}Criar {% endif %}</button>
+            {% if action %}
+            <a href="{% url 'no_delete' object.id %}" class="btn btn-prospera btn-lg" style="margin-left: 40px;">Excluir</a>
+            {% endif %}
           </div>
         </div>
       </form>
