Adicionando textos para listagem de no e objetos

--- a/plataforma/templates/pages/no_list.html
+++ b/plataforma/templates/pages/no_list.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-8 col-lg-10 col-md-offset-1 col-lg-offset-0">
         <p class="text-justify">
-          São grupos de interesse, aprendizagem e prática que se formam organicamente no sistema. Os sujeitos se agrupam por interesses comuns. E o objetivo da comunidade é ser um ambiente onde o sujeito gera receita para si por meio da criação e comercialização de objetos que estejam alinhados com os interesses da comunidade.
+          No modelo industrial, o foco é no objeto, no objetivo. As métricas são da produtividade e, como a sobrevivência se dá a partir da produção, tudo é pautado pela eficiência. Na Prospera, soma-se ao objetivo o subjetivo, o sujeito: a pessoa, o NÓ do NÓS. Com isso, o olhar da organização não se limita à sobrevivência: inclui a evolução.
         </p>
       </div>
       <div class="inline-block hidden-sm hidden-xs">
