--- a/plataforma/templates/pages/object_list.html
+++ b/plataforma/templates/pages/object_list.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-8 col-lg-10 col-md-offset-1 col-lg-offset-0">
         <p class="text-justify">
-          São grupos de interesse, aprendizagem e prática que se formam organicamente no sistema. Os sujeitos se agrupam por interesses comuns. E o objetivo da comunidade é ser um ambiente onde o sujeito gera receita para si por meio da criação e comercialização de objetos que estejam alinhados com os interesses da comunidade.
+          São a fonte de receita financeira dos sujeitos que integram a comunidade. Têm uma natureza comum. Não são de propriedade da comunidade, mas impactam na vida de todos que a integram. Pertencem aos sujeitos que, em interação cocriativa, criam novos objetos e formas de comercialização, expandindo assim suas possibilidades de receitas.
         </p>
       </div>
       <div class="inline-block hidden-sm hidden-xs">
