Apresentando alerta ao remover perfil e comunidade

--- a/plataforma/templates/pages/no_delete_form.html
+++ b/plataforma/templates/pages/no_delete_form.html
@@ -9,13 +9,25 @@
       <h1 class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">+ Excluir Perfil +</h1>
     </div>
     <div class="row">
-      <form class="" enctype="multipart/form-data" method="POST">
-        {% csrf_token %}
-        <p class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">Você tem certeza que deseja excluir o seu perfil?</p>
-        <div class="col-xs-12">
-          <button class="btn btn-prospera btn-lg" type="submit">Sim</button>
-        </div>
-      </form>
+      {% if comunidades_list and objetos_list %}
+      <p style="margin-left: 20px;"><strong>Atenção:</strong> Você possuí Comunidade(s) e/ou Objeto(s) registrados ao o seu perfil. Antes de excluir seu perfil, remova os itens abaixo:</p>
+      <ul>
+        {% for cm in comunidades_list %}
+        <li><a href="{% url 'nos_detail' cm.slug %}" target="_blank" style="color: white;">{{ cm }} - {{ cm.resumo }}</a></li>
+        {% endfor %}
+        {% for ob in objetos_list %}
+        <li><a href="{% url 'object_detail' ob.nodos.slug ob.slug %}" target="_blank" style="color: white;">{{ ob }}</a></li>
+        {% endfor %}
+      </ul>
+      {% else %}
+        <form class="" enctype="multipart/form-data" method="POST">
+          {% csrf_token %}
+          <p class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">Você tem certeza que deseja excluir o seu perfil?</p>
+          <div class="col-xs-12">
+            <button class="btn btn-prospera btn-lg" type="submit">Sim</button>
+          </div>
+        </form>
+      {% endif %}
     </div>
   </section>
 </div>
