--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -45,8 +45,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gecwxANPwDY?"
-  frameborder="0" ></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IyKo-tvaALs?list=PLP2Lm5IaXG3mp3PuStQYZydG09o7UwvPR" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
