Adicionando quantidade para cada tópico

--- a/plataforma/templates/pages/no_list.html
+++ b/plataforma/templates/pages/no_list.html
@@ -9,7 +9,7 @@
   <section class="descricao-content container">
     <div class="row">
       <div class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">
-        <h1>+ Sujeitos +</h1>
+        <h1>+ Sujeitos + <span style="font-size: 12px;letter-spacing: 2px;">[{{ object_list|length }}]</span></h1>
       </div>
       <div class="col-md-8 col-lg-10 col-md-offset-1 col-lg-offset-0">
         <p class="text-justify">
